--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title><%= title %></title>
-	<link rel='stylesheet' href='/stylesheets/style.css'/>
+	<link rel='stylesheet' href='/style.css'/>
 
-	<script src="/js/bower_components/socket.io-client/socket.io.js"></script>
+	<script src="/bower_components/socket.io-client/socket.io.js"></script>
 	<script>
 		var socket = io.connect('http://localhost:3000');
 		socket.on('news', function (data) {
